@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 06275fd8f4bacbe8c0989ce552b097ab) *)
+(* DO NOT EDIT (digest: a0d085a2bb0e03f9d01fd3935ae3d4cf) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5765,7 +5765,9 @@ let setup_t =
                "(C) 2001 Gerd Stolpmann";
                "(C) 2012 Goswin von Brederlow";
                "(C) 2012 Andre Nathan";
-               "(C) 2013 Zhenya Lykhovyd"
+               "(C) 2013 Zhenya Lykhovyd";
+               "(C) 2013 Mehdi Dogguy";
+               "(C) 2013 Roman Vorobets"
             ];
           maintainers = [];
           authors =
@@ -5779,7 +5781,9 @@ let setup_t =
                "Gerd Stolpmann";
                "Goswin von Brederlow";
                "Andre Nathan";
-               "Zhenya Lykhovyd"
+               "Zhenya Lykhovyd";
+               "Mehdi Dogguy";
+               "Roman Vorobets"
             ];
           homepage = Some "http://extunix.forge.ocamlcore.org/";
           synopsis = "Extended functions for OCaml Unix module";
@@ -5902,6 +5906,7 @@ let setup_t =
                            "endianba.c";
                            "pread_pwrite_ba.c";
                            "bigarray.c";
+                           "sysconf.c";
                            "common.c";
                            "common.h"
                         ];
@@ -6064,7 +6069,9 @@ let setup_t =
                            "Gerd Stolpmann";
                            "Goswin von Brederlow";
                            "Andre Nathan";
-                           "Zhenya Lykhovyd"
+                           "Zhenya Lykhovyd";
+                           "Mehdi Dogguy";
+                           "Roman Vorobets"
                         ];
                       doc_abstract = None;
                       doc_format = HTML "index.html";
@@ -6084,7 +6091,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some "$C\146\1966\135\196\031\245\227K%\rM\244\236";
+     oasis_digest = Some " \025\140>\130\219\185?\206\202\222\170\183\2029H";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -6092,6 +6099,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 6096 "setup.ml"
+# 6103 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
